--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -70,9 +70,9 @@
 <li><strong>модель (оценка переменных)</strong></li>
 <li><strong>оценка высказывания</strong> высказывание $A[\![]\!]$</li>
 <li><strong>общезначимость ($\models$)</strong> &mdash; истинность при любой оценке</li>
-<li><strong>корректность</strong></li>
-<li><strong>полнота</strong></li>
-<li><strong>формулировка теоремы о дедукции</strong></li>
+<li><strong>корректность</strong> &mdash; доказуемость $\implies$ общезначимость</li>
+<li><strong>полнота</strong> &mdash; общезначимость $\implies$ доказуемость</li>
+<li><strong>формулировка теоремы о дедукции</strong> $\Gamma \vdash \alpha \rightarrow \beta \iff \Gamma, \alpha \vdash \beta$</li>
 </ul>
 </li>
 <li><p><strong>Интуиционистское исчисление высказываний</strong></p>
