--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>index</title>
 </head>
 <body>
-<a href="MathLogic/Defs.html">Defs</a>
+<a href="MathLogic/Colloq/Defs.html">Defs</a>
 </body>
 </html>
