Update after questions release

--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -22,10 +22,6 @@
   &mdash; упорядоченная пара $\langle X, \Omega\rangle$,
   где $X$(<em>носитель</em>) &mdash; множество,
   а $\Omega$(<em>топология</em>) &mdash; множество каких-то его подмножеств.</li>
-<li><strong>база топологического пространства</strong>
-  &mdash;  семейство открытых подмножеств топологического пространства $X$,
-  такое, что любое открытое множество в $X$ представимо
-  в виде объединения элементов этого семейства.</li>
 <li><strong>открытое и замкнутое множество</strong><br/>
   <em>Открытое множество</em> &mdash; множество из $X$.<br/>
   <em>Замкнутое множество</em> &mdash; мн-во, дополнение которого открыто.</li>
@@ -54,6 +50,8 @@
   </pre><br/>
   A,B,C &hellip; &mdash; <em>пропозициональные переменные</em><br/>
   X,Y,Z &hellip; &mdash; <em>метапеременные для переменных</em></li>
+<li><strong>метапеременные</strong></li>
+<li><strong>пропозициональные переменные</strong></li>
 <li><strong>аксиома</strong> &mdash; высказывание</li>
 <li><strong>схема аксиом</strong> &mdash; шаблон для генерации аксиом</li>
 <li><strong>правило Modus Ponens</strong> &mdash; Если доказано $\alpha$ и $\alpha \rightarrow \beta$, то считаем доказанным $\beta$</li>
@@ -68,10 +66,14 @@
   где $\alpha_k = \alpha$.</li>
 <li><strong>множество истинностных значений</strong></li>
 <li><strong>модель (оценка переменных)</strong></li>
-<li><strong>оценка высказывания</strong> высказывание $A[\![]\!]$</li>
+<li><strong>оценка высказывания</strong></li>
 <li><strong>общезначимость ($\models$)</strong> &mdash; истинность при любой оценке</li>
+<li><strong>выполнимость</strong></li>
+<li><strong>невыполнимость</strong></li>
+<li><strong>следование</strong></li>
 <li><strong>корректность</strong> &mdash; доказуемость $\implies$ общезначимость</li>
 <li><strong>полнота</strong> &mdash; общезначимость $\implies$ доказуемость</li>
+<li><strong>противоречивость</strong></li>
 <li><strong>формулировка теоремы о дедукции</strong> $\Gamma \vdash \alpha \rightarrow \beta \iff \Gamma, \alpha \vdash \beta$</li>
 </ul>
 </li>
@@ -79,8 +81,9 @@
 
 <ul>
 <li><strong>закон исключённого третьего</strong></li>
-<li><strong>BHK-интерпретация</strong></li>
-<li><strong>логических связок</strong></li>
+<li><strong>закон снятия двойного отрицания</strong></li>
+<li><strong>закон Пирса</strong></li>
+<li><strong>BHK-интерпретация логических связок</strong></li>
 <li><strong>теорема Гливенко (формулировка)</strong></li>
 <li><strong>решётка</strong></li>
 <li><strong>дистрибутивная решётка</strong></li>
@@ -91,8 +94,6 @@
 <li><strong>Гёделева алгебра</strong></li>
 <li><strong>операция Γ(A)</strong></li>
 <li><strong>алгебра Линденбаума</strong></li>
-<li><strong>модель Крипке</strong></li>
-<li><strong>вложение моделей Крипке в алгебры Гейтинга</strong></li>
 <li><strong>формулировка свойства дизъюнктивности и.и.в</strong></li>
 <li><strong>формулировка свойства нетабличности и.и.в.</strong></li>
 </ul>
@@ -135,10 +136,13 @@ V множество истинностынх значений</p>
 <li><strong>свобода для подстановки</strong></li>
 <li><strong>два правила для кванторов</strong></li>
 <li><strong>две аксиомы для кванторов</strong></li>
-<li><strong>модель в исчислении предикатов</strong></li>
+<li><strong>оценки и модели в исчислении предикатов</strong></li>
+<li><strong>теорема о дедукции для И. П.</strong></li>
+<li><strong>теорема о корректности для И. П.</strong></li>
 <li><strong>полное множество (бескванторных) формул</strong></li>
 <li><strong>модель для формулы</strong></li>
 <li><strong>теорема Гёделя о полноте исчисления предикатов (формулировка)</strong></li>
+<li>__следствие из теоремы Гёделя о исчислении предикатов</li>
 </ul>
 </li>
 </ul>
