--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<head>
-<title>index</title>
-</head>
-<body>
-<a href="MathLogic/Colloq/Defs.html">Defs</a>
-</body>
+    <head>
+        <title>Navigation</title>
+    </head>
+    <body>
+        <h3>Mathematical logic</h3>
+        <p>
+        Материалы для <a href="MathLogic/Colloq/Defs.html">подготовки</a> к <a href=https://github.com/shd/logic2019/blob/master/colloq.pdf>коллоквиуму</a>.
+        </p>
+    </body>
 </html>
