--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -84,6 +84,7 @@
 <li><strong>закон исключённого третьего</strong> $\alpha \vee \neg \alpha$</li>
 <li><strong>закон снятия двойного отрицания</strong> $\neg \neg \alpha \rightarrow \alpha$</li>
 <li><strong>закон Пирса</strong> $((\alpha \rightarrow \beta) \rightarrow \alpha) \rightarrow \alpha$</li>
+<li><strong>Все эти законы не выводятся в ИИВ</strong></li>
 <li><strong>BHK-интерпретация логических связок</strong><br/>
   $\alpha \&amp; \beta$, если есть доказательство $\alpha$ и $\beta$<br/>
   $\alpha \vee \beta$, если есть доказательство $\alpha$ или $\beta$ и мы знаем, чего именно<br/>
@@ -124,40 +125,33 @@
 <li><strong>формулировка свойства нетабличности и.и.в.</strong></li>
 </ul>
 </li>
-</ul>
-
-
-<p>D предметное множество<br/>
-V множество истинностынх значений</p>
-
-<p>ФУНКЦИЯ  : D<sup>n</sup> -> D<br/>
-ПРЕДИКАТ : D<sup>n</sup> -> V</p>
-
-<p>Предметная переменная      a, b, c, x, y, z, a₀, a' &hellip;<br/>
-Терм                       θ₀, θ₁ &hellip;<br/>
-Предикатный символ         P<br/>
-Формула                    α, ψ, φ</p>
-
-<p>ТЕРМ =<br/>
-        (предметная переменная) |<br/>
-        (функциональный символ) (ТЕРМ₀, ТЕРМ₁, &hellip;)<br/>
-ФОРМУЛА =<br/>
-        (ФОРМУЛА |  ФОРМУЛА) |<br/>
-        (ФОРМУЛА &amp;  ФОРМУЛА) |<br/>
-        (ФОРМУЛА -> ФОРМУЛА) |<br/>
-        (!ФОРМУЛА) |<br/>
-        (∀ предметная переменная.ФОРМУЛА) |<br/>
-        (∃ предметная переменная.ФОРМУЛА) |<br/>
-        (предикатный символ)(ТЕРМ₀, ТЕРМ₁, &hellip;)</p>
-
-<p>Связанное вхождение &mdash; вхождение в области действия квантора. Ex: (∀x. … x …) второе вхождение &mdash; связанное.<br/>
-Терм θ свободен для подстановки в формулу ψ вместо x, если после подстановки θ вместо свободных вхождений x, θ не станет связанным.</p>
+<li><p><strong>Исчисление предикатов</strong></p>
 
 <ul>
-<li><strong>Исчисление предикатов</strong>
-
-<ul>
-<li><strong>предикатные и функциональные символы, константы и пропозициональные переменные</strong></li>
+<li><strong>предикатные и функциональные символы, константы и пропозициональные переменные</strong>
+  <pre>
+  D предметное множество
+  V множество истинностынх значений<br/>
+  ФУНКЦИЯ  : D<sup>n</sup> -> D
+  ПРЕДИКАТ : D<sup>n</sup> -> V<br/>
+  Предметная переменная      a, b, c, x, y, z, a₀, a' &hellip;
+  Терм                       θ₀, θ₁ &hellip;
+  Предикатный символ         P
+  Формула                    α, ψ, φ<br/>
+  ТЕРМ =
+          (предметная переменная) |
+          (функциональный символ) (ТЕРМ₀, ТЕРМ₁, &hellip;)
+  ФОРМУЛА =
+          (ФОРМУЛА |  ФОРМУЛА) |
+          (ФОРМУЛА &amp;  ФОРМУЛА) |
+          (ФОРМУЛА -> ФОРМУЛА) |
+          (!ФОРМУЛА) |
+          (∀ предметная переменная.ФОРМУЛА) |
+          (∃ предметная переменная.ФОРМУЛА) |
+          (предикатный символ)(ТЕРМ₀, ТЕРМ₁, &hellip;)<br/>
+  Связанное вхождение &mdash; вхождение в области действия квантора. Ex: (∀x. … x …) второе вхождение &mdash; связанное.
+  Терм θ свободен для подстановки в формулу ψ вместо x, если после подстановки θ вместо свободных вхождений x, θ не станет связанным.
+  </pre></li>
 <li><strong>свободные и связанные вхождения предметных переменных в формулу</strong></li>
 <li><strong>свобода для подстановки</strong></li>
 <li><strong>два правила для кванторов</strong></li>
