Correct free for substitution defs

--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -130,14 +130,14 @@
 <ul>
 <li><strong>предикатные и функциональные символы, константы и пропозициональные переменные</strong>
   <pre>
-  D предметное множество
-  V множество истинностынх значений<br/>
-  ФУНКЦИЯ  : D<sup>n</sup> -> D
-  ПРЕДИКАТ : D<sup>n</sup> -> V<br/>
-  Предметная переменная      a, b, c, x, y, z, a₀, a' &hellip;
-  Терм                       θ₀, θ₁ &hellip;
-  Предикатный символ         P
-  Формула                    α, ψ, φ<br/>
+  D <em>предметное множество</em>
+  V <em>множество истинностынх значений</em><br/>
+  <em>ФУНКЦИЯ</em>  : D<sup>n</sup> -> D
+  <em>ПРЕДИКАТ</em> : D<sup>n</sup> -> V<br/>
+  <em>Предметная переменная</em>      a, b, c, x, y, z, a₀, a' &hellip;
+  <em>Терм</em>                       θ₀, θ₁ &hellip;
+  <em>Предикатный символ</em>         P
+  <em>Формула</em>                    α, ψ, φ<br/>
   ТЕРМ =
           (предметная переменная) |
           (функциональный символ) (ТЕРМ₀, ТЕРМ₁, &hellip;)
@@ -149,8 +149,11 @@
           (∀ предметная переменная.ФОРМУЛА) |
           (∃ предметная переменная.ФОРМУЛА) |
           (предикатный символ)(ТЕРМ₀, ТЕРМ₁, &hellip;)<br/>
-  Связанное вхождение &mdash; вхождение в области действия квантора. Ex: (∀x. … x …) второе вхождение &mdash; связанное.
-  Терм θ свободен для подстановки в формулу ψ вместо x, если после подстановки θ вместо свободных вхождений x, θ не станет связанным.
+  <em>Связанное</em> вхождение &mdash; вхождение в области действия квантора.
+  <em>Связывающее</em> вхождение &mdash; вхождение непосредственно рядом с квантором.
+  Ex: (∀x. … x …) первое вхождение &mdash; связывающее, второе вхождение &mdash; связанное.
+  Не связанные и не связывающие вхождения &mdash; <em>свободные</em>.
+  Терм θ <em>свободен для подстановки</em> в формулу ψ вместо x, если после подстановки θ вместо свободных вхождений x, θ не станет связанным.
   </pre></li>
 <li><strong>свободные и связанные вхождения предметных переменных в формулу</strong></li>
 <li><strong>свобода для подстановки</strong></li>
