--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -170,5 +170,9 @@
 </li>
 </ul>
 
+
+<p><a href="https://www.mccme.ru/free-books/shen/shen-logic-part2-2.pdf">Шень, Верещагин</a>
+<a href="http://lpcs.math.msu.su/~plisko/intlog.pdf">Инт. логика</a>
+<a href="https://github.com/shd/logic2011/blob/master/conspect.pdf">Конспект 2011</a></p>
 </body>
 </html>
