--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -18,19 +18,19 @@
 <li><p><strong>Топология</strong></p>
 
 <ul>
-<li><strong>топологическое пространство</strong>
+<li><span style="color:olive;"><strong>топологическое пространство</strong></span>
   &mdash; упорядоченная пара $\langle X, \Omega\rangle$,
   где $X$(<em>носитель</em>) &mdash; множество,
   а $\Omega$(<em>топология</em>) &mdash; множество каких-то его подмножеств.</li>
-<li><strong>открытое и замкнутое множество</strong><br/>
+<li><span style="color:olive;"><strong>открытое и замкнутое множество</strong></span><br/>
   <em>Открытое множество</em> &mdash; множество из $X$.<br/>
   <em>Замкнутое множество</em> &mdash; мн-во, дополнение которого открыто.</li>
-<li><strong>внутренность и замыкание множества</strong><br/>
+<li><span style="color:olive;"><strong>внутренность и замыкание множества</strong></span><br/>
   <em>внутренность $A$</em> &mdash; максимальное открытое множество $A^\circ$, входящее в $A$<br/>
   <em>замыкане $A$</em> &mdash; минимальное замкнутое множество $\overline A$, содержащее $A$</li>
-<li><strong>топология стрелки</strong>
+<li><span style="color:olive;"><strong>топология стрелки</strong></span>
   $X=\mathbb R, \Omega = \{(x,+\infty)|x\in \mathbb R\} \cup \{\emptyset\}$</li>
-<li><strong>дискретная топология</strong>
+<li><span style="color:olive;"><strong>дискретная топология</strong></span>
   $X \neq \emptyset, \Omega = 2^X $</li>
 <li><strong>топология на частично упорядоченном множестве</strong></li>
 <li><strong>индуцированная топология на подпространстве</strong></li>
@@ -40,7 +40,7 @@
 <li><p><strong>Исчисление высказываний</strong></p>
 
 <ul>
-<li><strong>высказывание</strong> &mdash; Строка в некотором алфавите, строящаяся по ледующим правилам:
+<li><span style="color:olive;"><strong>высказывание</strong></span> &mdash; Строка в некотором алфавите, строящаяся по ледующим правилам:
   <pre>
   высказывание :=
       {пропозициональная переменная}  |
@@ -52,46 +52,46 @@
   X,Y,Z &hellip; &mdash; <em>метапеременные для переменных</em></li>
 <li><strong>метапеременные</strong></li>
 <li><strong>пропозициональные переменные</strong></li>
-<li><strong>аксиома</strong> &mdash; высказывание</li>
-<li><strong>схема аксиом</strong> &mdash; шаблон для генерации аксиом</li>
-<li><strong>правило Modus Ponens</strong> &mdash; Если доказано $\alpha$ и $\alpha \rightarrow \beta$, то считаем доказанным $\beta$</li>
-<li><strong>доказательство</strong> &mdash; последовательность высказываний, каждое из которых либо
+<li><span style="color:olive;"><strong>аксиома</strong></span> &mdash; высказывание</li>
+<li><span style="color:olive;"><strong>схема аксиом</strong></span> &mdash; шаблон для генерации аксиом</li>
+<li><span style="color:olive;"><strong>правило Modus Ponens</strong></span> &mdash; Если доказано $\alpha$ и $\alpha \rightarrow \beta$, то считаем доказанным $\beta$</li>
+<li><span style="color:olive;"><strong>доказательство</strong></span> &mdash; последовательность высказываний, каждое из которых либо
   аксиома, либо Modus Ponens.</li>
-<li><strong>вывод из гипотез</strong><br/>
+<li><span style="color:olive;"><strong>вывод из гипотез</strong></span><br/>
   $\alpha$ выводимо из $\Gamma$, где $\Gamma$ &mdash; список высказываний, если существует <em>вывод</em>,
   то есть последовательность высказываний такая,
   что каждое из них либо аксиома, либо из $\Gamma$, либо получается по M. P.</li>
-<li><strong>доказуемость ($\vdash$)</strong><br/>
+<li><span style="color:olive;"><strong>доказуемость ($\vdash$)</strong></span><br/>
   Высказывание $\alpha$ <em>доказуемо</em>, если существует доказательство $\alpha_1 \ldots \alpha_k$,
   где $\alpha_k = \alpha$.</li>
 <li><strong>множество истинностных значений</strong></li>
 <li><strong>модель (оценка переменных)</strong></li>
-<li><strong>оценка высказывания</strong> &mdash; Отображение: формула $\rightarrow$ множество истинностных значений</li>
-<li><strong>общезначимость ($\models$)</strong> &mdash; истинность при любой оценке</li>
+<li><span style="color:olive;"><strong>оценка высказывания</strong></span> &mdash; Отображение: формула $\rightarrow$ множество истинностных значений</li>
+<li><span style="color:olive;"><strong>общезначимость ($\models$)</strong></span> &mdash; истинность при любой оценке</li>
 <li><strong>выполнимость</strong></li>
 <li><strong>невыполнимость</strong></li>
 <li><strong>следование</strong></li>
-<li><strong>корректность</strong> &mdash; доказуемость $\implies$ общезначимость</li>
-<li><strong>полнота</strong> &mdash; общезначимость $\implies$ доказуемость</li>
+<li><span style="color:olive;"><strong>корректность</strong></span> &mdash; доказуемость $\implies$ общезначимость</li>
+<li><span style="color:olive;"><strong>полнота</strong></span> &mdash; общезначимость $\implies$ доказуемость</li>
 <li><strong>противоречивость</strong></li>
-<li><strong>формулировка теоремы о дедукции</strong> $\Gamma \vdash \alpha \rightarrow \beta \iff \Gamma, \alpha \vdash \beta$</li>
+<li><span style="color:olive;"><strong>формулировка теоремы о дедукции</strong></span> $\Gamma \vdash \alpha \rightarrow \beta \iff \Gamma, \alpha \vdash \beta$</li>
 </ul>
 </li>
 <li><p><strong>Интуиционистское исчисление высказываний</strong>
   (заменили аксиому снятия двойного отрицания на $\alpha \rightarrow \neg \alpha \rightarrow \beta$)</p>
 
 <ul>
-<li><strong>закон исключённого третьего</strong> $\alpha \vee \neg \alpha$</li>
-<li><strong>закон снятия двойного отрицания</strong> $\neg \neg \alpha \rightarrow \alpha$</li>
-<li><strong>закон Пирса</strong> $((\alpha \rightarrow \beta) \rightarrow \alpha) \rightarrow \alpha$</li>
-<li><strong>Все эти законы не выводятся в ИИВ</strong></li>
-<li><strong>BHK-интерпретация логических связок</strong><br/>
+<li><span style="color:olive;"><strong>закон исключённого третьего</strong></span> $\alpha \vee \neg \alpha$</li>
+<li><span style="color:olive;"><strong>закон снятия двойного отрицания</strong></span> $\neg \neg \alpha \rightarrow \alpha$</li>
+<li><span style="color:olive;"><strong>закон Пирса</strong></span> $((\alpha \rightarrow \beta) \rightarrow \alpha) \rightarrow \alpha$</li>
+<li><span style="color:olive;"><strong>Все эти законы не выводятся в ИИВ</strong></span></li>
+<li><span style="color:olive;"><strong>BHK-интерпретация логических связок</strong></span><br/>
   $\alpha \&amp; \beta$, если есть доказательство $\alpha$ и $\beta$<br/>
   $\alpha \vee \beta$, если есть доказательство $\alpha$ или $\beta$ и мы знаем, чего именно<br/>
   $\alpha \rightarrow \beta$, если мы умеем строить доказательство $\beta$ из доказательства $\alpha$<br/>
   $\neg \alpha$, если из $\alpha$ можно построить противоречие ($\alpha \rightarrow \perp$)</li>
-<li><strong>теорема Гливенко (формулировка)</strong> Если $\vdash_{\text{к}} \alpha$, то $\vdash_{\text{и}} \neg \neg \alpha$</li>
-<li><strong>решётка</strong><br/>
+<li><span style="color:olive;"><strong>теорема Гливенко (формулировка)</strong></span> Если $\vdash_{\text{к}} \alpha$, то $\vdash_{\text{и}} \neg \neg \alpha$</li>
+<li><span style="color:olive;"><strong>решётка</strong></span><br/>
   $\langle A, \leq \rangle$ &mdash; решётка, если:
 
 <ul>
@@ -99,64 +99,64 @@
 <li>$\forall a,b \in A: \quad \exists \text{наибольший } c = a \cdot b : c \leq a, c \leq b $</li>
 </ul>
 </li>
-<li><strong>дистрибутивная решётка</strong><br/>
+<li><span style="color:olive;"><strong>дистрибутивная решётка</strong></span><br/>
   решётка + свойство: $a+(b \cdot c) = a \cdot b + a \cdot c$<br/>
   <strong>лемма</strong>: $a\cdot(b+c) = a\cdot b + a \cdot c$<br/>
   <strong>теорема</strong>: решётка дистрибутивна $\iff$ не содержит ни диаманта ни пентагона</li>
-<li><strong>импликативная решётка</strong><br/>
+<li><span style="color:olive;"><strong>импликативная решётка</strong></span><br/>
   дистрибутивная решётка + определена операция псевдодополнения (относительно $b$):
       $c = a \rightarrow b = max \{ x | x \cdot a \leq b \}$<br/>
   <strong>теорема</strong>: дистрибутивность в определении можно опустить<br/>
   <strong>def</strong>: <em>1</em> &mdash; наибольший элемент решётки<br/>
   <strong>def</strong>: <em>0</em> &mdash; наименьший элемент решётки</li>
-<li><strong>алгебра Гейтинга</strong> &mdash; Импликативная решётка с 0<br/>
+<li><span style="color:olive;"><strong>алгебра Гейтинга</strong></span> &mdash; Импликативная решётка с 0<br/>
   <strong>def</strong>: <em>псевдодополнение</em> $~a = a \rightarrow 0$</li>
-<li><strong>булева алгебра</strong> &mdash; алгебрa Гейтинга такая, что $\forall a: a + ~a = 1$</li>
+<li><span style="color:olive;"><strong>булева алгебра</strong></span> &mdash; алгебрa Гейтинга такая, что $\forall a: a + ~a = 1$</li>
 <li><strong>гомоморфизм алгебр Гейтинга</strong></li>
-<li><strong>Гёделева алгебра</strong><br/>
+<li><span style="color:olive;"><strong>Гёделева алгебра</strong></span><br/>
   Алгебра Гейтинга <em>гёделева</em>, если $\forall a,b : (a+b=1 \implies a=1 | b=1)$</li>
-<li><strong>операция Γ(A)</strong>
+<li><span style="color:olive;"><strong>операция Γ(A)</strong></span>
   Добавим к алгебре Гейтинга новую &ldquo;1&rdquo;, большую всех элементов, а старую переименуем в &ldquo;$\omega$&rdquo;.</li>
-<li><strong>алгебра Линденбаума</strong>
+<li><span style="color:olive;"><strong>алгебра Линденбаума</strong></span>
   Пусть $\alpha$, $\beta$ &mdash; формулы, $\alpha \leq \beta$, если $\beta\vdash\alpha$,
   $\alpha \approx \beta$, если $\alpha \leq \beta \&amp; \beta \leq \alpha $<br/>
   Тогда, <em>алгебра Линденбаума</em> &mdash; $\text{ИИВ}/_{\approx}$ [факторизация по операции $\approx$]</li>
-<li><strong>формулировка свойства дизъюнктивности и.и.в</strong> &mdash; $\vdash \alpha \vee \beta \implies \vdash \alpha \text{ или } \vdash \beta$</li>
+<li><span style="color:olive;"><strong>формулировка свойства дизъюнктивности и.и.в</strong></span> &mdash; $\vdash \alpha \vee \beta \implies \vdash \alpha \text{ или } \vdash \beta$</li>
 <li><strong>формулировка свойства нетабличности и.и.в.</strong></li>
 </ul>
 </li>
 <li><p><strong>Исчисление предикатов</strong></p>
 
 <ul>
-<li><strong>предикатные и функциональные символы, константы и пропозициональные переменные</strong>
+<li><span style="color:green;"><strong>предикатные и функциональные символы, константы и пропозициональные переменные</strong></span></li>
+<li><span style="color:green;"><strong>свободные и связанные вхождения предметных переменных в формулу</strong></span></li>
+<li><span style="color:green;"><strong>свобода для подстановки</strong></span>
   <pre>
-  D <em>предметное множество</em>
-  V <em>множество истинностынх значений</em><br/>
-  <em>ФУНКЦИЯ</em>  : D<sup>n</sup> -> D
-  <em>ПРЕДИКАТ</em> : D<sup>n</sup> -> V<br/>
-  <em>Предметная переменная</em>      a, b, c, x, y, z, a₀, a' &hellip;
-  <em>Терм</em>                       θ₀, θ₁ &hellip;
-  <em>Предикатный символ</em>         P
-  <em>Формула</em>                    α, ψ, φ<br/>
-  ТЕРМ =
+  <span style="color:red;">D</span> <em>предметное множество</em>
+  <span style="color:green;">V</span> <em>множество истинностынх значений</em><br/>
+  <span style="color:red;"><em>ФУНКЦИЯ</em></span>  : D<sup>n</sup> -> D
+  <span style="color:green;"><em>ПРЕДИКАТ</em></span> : D<sup>n</sup> -> V<br/>
+  <span style="color:red;"><em>Предметная переменная</em></span>      a, b, c, x, y, z, a₀, a' &hellip;
+  <span style="color:red;"><em>Терм</em></span>                       θ₀, θ₁ &hellip;
+  <span style="color:green;"><em>Предикатный символ</em></span>         P
+  <span style="color:green;"><em>Формула</em></span>                    α, ψ, φ<br/>
+  <span style="color:red;">ТЕРМ</span> =
           (предметная переменная) |
           (функциональный символ) (ТЕРМ₀, ТЕРМ₁, &hellip;)
-  ФОРМУЛА =
+  <span style="color:green;">ФОРМУЛА =
           (ФОРМУЛА |  ФОРМУЛА) |
           (ФОРМУЛА &amp;  ФОРМУЛА) |
           (ФОРМУЛА -> ФОРМУЛА) |
           (!ФОРМУЛА) |
-          (∀ предметная переменная.ФОРМУЛА) |
-          (∃ предметная переменная.ФОРМУЛА) |
-          (предикатный символ)(ТЕРМ₀, ТЕРМ₁, &hellip;)<br/>
+          (∀ <span style="color:red;">предметная переменная</span>.ФОРМУЛА) |
+          (∃<span style="color:red;"> предметная переменная</span>.ФОРМУЛА) |</span>
+          (<span style="color:green;">предикатный символ</span>)(<span style="color:red;">ТЕРМ</span>₀,<span style="color:red;"> ТЕРМ</span>₁, &hellip;)<br/>
   <em>Связанное</em> вхождение &mdash; вхождение в области действия квантора.
   <em>Связывающее</em> вхождение &mdash; вхождение непосредственно рядом с квантором.
   Ex: (∀x. … x …) первое вхождение &mdash; связывающее, второе вхождение &mdash; связанное.
   Не связанные и не связывающие вхождения &mdash; <em>свободные</em>.
   Терм θ <em>свободен для подстановки</em> в формулу ψ вместо x, если после подстановки θ вместо свободных вхождений x, θ не станет связанным.
   </pre></li>
-<li><strong>свободные и связанные вхождения предметных переменных в формулу</strong></li>
-<li><strong>свобода для подстановки</strong></li>
 <li><strong>два правила для кванторов</strong></li>
 <li><strong>две аксиомы для кванторов</strong></li>
 <li><strong>оценки и модели в исчислении предикатов</strong></li>
