--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
         <title>Navigation</title>
     </head>
     <body>
-        <h3>Mathematical logic</h3>
+        <h3>МатЛог</h3>
         <p>
         Материалы для <a href="MathLogic/Colloq/Defs.html">подготовки</a> к <a href=https://github.com/shd/logic2019/blob/master/colloq.pdf>коллоквиуму</a>.
+        </p>
+        <h3>МатАн</h3>
+        <p>
+        <a href="MathAnalysis/Sem4/Integrals.html">К рубежке (7 модуля)</a>
         </p>
     </body>
 </html>
