Add pdf generation for better compatibility and repetibility, while not having to write CSS

--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -78,9 +78,19 @@
             </tr>
         </table>
         <h2>Фигня, с ними связанная</h2>
+        <h3>Поле скалярное</h3>
+        <p>TODO</p>
+        <h3>Поле векторное</h3>
+        <p>TODO</p>
+        <h3>Ротор, дивергенция и набла</h3>
+        <p>TODO</p>
         <h3>Формула Гаусса-Остроградского</h3>
         <p>TODO</p>
         <h3>Формула Стокса</h3>
+        <p>TODO</p>
+        <h3>Поле потенциальное</h3>
+        <p>TODO</p>
+        <h3>Поле соленоидальное</h3>
         <p>TODO</p>
     </body>
 </html>
