Add link to PDF from index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </p>
         <h3>МатАн</h3>
         <p>
-        <a href="MathAnalysis/Sem4/Integrals.html">К рубежке (7 модуля)</a>
+        К рубежке (7 модуля) <a href="MathAnalysis/Sem4/Integrals.html">HTML (оптимально с ноута)</a> / <a href="MathAnalysis/Sem4/Integrals.pdf">PDF (если у вас мобильный хром, который коробит сайты без CSS)</a> 
         </p>
     </body>
 </html>
