Add thoughts about why it is OK to use BAC-CAB

--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -125,7 +125,8 @@
                 Значит, с дифференцировением можно делать всё, что угодно, но только не переставлять правее, чем $a_i$.
                 Забудем, что это оператор дифференцирования и применим формулу
                 <a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B2%D0%BE%D0%B9%D0%BD%D0%BE%D0%B5_%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D0%B8%D0%B7%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5#%D0%A4%D0%BE%D1%80%D0%BC%D1%83%D0%BB%D0%B0_%D0%9B%D0%B0%D0%B3%D1%80%D0%B0%D0%BD%D0%B6%D0%B0">"BAC-CAB"</a>.
-                Понятно, что в доказательстве (доступно по последней ссылке) никто не переставлял дифференцирование с $a_i$ и мы можем применить эту формулу.
+                Понятно, что в доказательстве (доступно по последней ссылке) никто не переставлял дифференцирование с $a_i$ 
+                [ну представим в доказательстве, что $\alpha_i$ &mdash; операторы дифференцирования], значит, мы можем применить эту формулу.
             </p>
             <p>
                 Теперь и формула (12) со страницы 14 
