Add link to github repo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         </p>
         <h3>МатАн</h3>
         <p>
-        К рубежке (7 модуля) <a href="MathAnalysis/Sem4/Integrals.html">HTML (оптимально с ноута)</a> / <a href="MathAnalysis/Sem4/Integrals.pdf">PDF (если у вас мобильный хром, который коробит сайты без CSS)</a> 
+			К рубежке (7 модуля)
+			<a href="MathAnalysis/Sem4/Integrals.html">HTML (оптимально с ноута)</a> /  
+			<a href="MathAnalysis/Sem4/Integrals.pdf">PDF (если у вас мобильный хром, который коробит сайты без CSS)</a> 
         </p>
+        <br><br>
+        <a href="https://github.com/VladimirP1/ITMO/">Pull requests are welcome</a>
     </body>
 </html>
