--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -131,7 +131,6 @@
             <p>
                 Теперь и формула (12) со страницы 14 
                 <a href="https://github.com/buraindo/ITMO/blob/master/Mathanalysis/4thSemester/Conspectus/Conspectus.pdf">отсюда</a>
-                [та, которую Родина не смогла доказать]
                 , теряет свой мистический облик. Рассмотрим $\nabla \times (f \times g)$.
                 Формула имеет почти тот же вид, но под оператором дифференцирования теперь произведение функций.
                 Но мы знаем, что для каждого слагаемого выполнены правила дифференцирования, то есть
@@ -144,13 +143,20 @@
             </p>
         </p>
         <h3>Формула Гаусса-Остроградского</h3>
-        <p>TODO</p>
+        <p>Пусть, $\Omega$ &mdash; область, имеющая кусочно-гладкую границу $\partial \Omega$, $\overline n_0$ &mdash; внешняя нормаль, отнормированная к 1, поле $\overline a (M)$ непрерывно дифференцируемо на $\Omega$. Тогда:<br>
+        $\int\int_{\partial \Omega} \overline a \cdot \overline n_0 ds = \int \int \int_\Omega div (\overline a) dx dy dz$</p>
         <h3>Формула Стокса</h3>
         <p>TODO</p>
         <h3>Поле потенциальное</h3>
         <p>TODO</p>
         <h3>Поле соленоидальное</h3>
         <p>TODO</p>
+        <h2>TODO:</h2>
+        <ul>
+            <li>Всё, что помечено выше</li>
+            <li>Условия, когда можно интегрировать и применять теоремы, которые возможно опущены</li>
+            <li>...</li>
+        </ul>
     </body>
 </html>
 
